# ice-nine

./: .env  .gitignore  Cargo.toml  README.md  book.toml  justfile
dui/ui9-app/: Cargo.toml
dui/ui9-app/src/: app.rs  lib.rs  protocol.rs
dui/ui9-codec/: Cargo.toml
dui/ui9-codec/src/: flex.rs  lib.rs  toml.rs  xml.rs
dui/ui9-dui/: Cargo.toml
dui/ui9-dui/src/: connector.rs  drainer.rs  flex.rs  hub.rs  lib.rs  protocol.rs  publisher.rs  relay.rs  router.rs  tracer.rs  utils.rs
dui/ui9-dui/src/flow/: flow.rs  mod.rs  packed.rs
dui/ui9-dui/src/hub/: client.rs  mod.rs  server.rs
dui/ui9-dui/src/publisher/: mod.rs  recorder.rs  server.rs  tracer.rs
dui/ui9-dui/src/relay/: connector.rs  drainer.rs  mod.rs  node.rs  relay_player.rs  remote_player.rs  router.rs
dui/ui9-dui/src/subscriber/: bridge.rs  client.rs  drainer.rs  listener.rs  local_player.rs  mod.rs  player.rs  relay.rs  relay_player.rs  remote_player.rs  watcher.rs
dui/ui9-dui/src/tracers/: mod.rs  peer.rs  tree.rs
dui/ui9-flow/: Cargo.toml
dui/ui9-flow-stream/: Cargo.toml
dui/ui9-flow-stream/src/: behaviour.rs  cbor.rs  codec.rs  handler.rs  lib.rs  protocol.rs
dui/ui9-flow-stream/tests/: ping.rs
dui/ui9-flow/src/: flow.rs  lib.rs
dui/ui9-maker/: Cargo.toml
dui/ui9-mesh/: Cargo.toml
dui/ui9-mesh/src/: mesh.rs
dui/ui9-request-response/: Cargo.toml
dui/ui9-request-response/src/: cbor.rs  handler.rs  json.rs  lib.rs
dui/ui9-request-response/tests/: error_reporting.rs  peer_address.rs  ping.rs
dui/ui9-tracers/: Cargo.toml
dui/ui9-tracers/src/: lib.rs  message.rs  phase.rs  progress.rs  textbox.rs  tree.rs
dui/ui9/src/: lib.rs
essential/core/: Cargo.toml
essential/core/src/: conversation_router.rs  keeper.rs  lib.rs  particle.rs  sequence.rs  space.rs  substance.rs  trace.rs
essential/core/src/conversation_router/: mod.rs
essential/core/src/essence/: mod.rs  particle.rs  substance.rs
essential/core/src/keeper/: interaction.rs  mod.rs  subscription.rs  updates.rs
essential/core/src/keeper2/: interaction.rs  mod.rs  subscription.rs
essential/core/src/registry/: add.rs  lookup.rs  mod.rs  remove.rs
essential/core/src/router/: link.rs  mod.rs  model.rs  tool.rs  tool_interaction.rs  types.rs
essential/ice9/: Cargo.toml
essential/ice9/src/: lib.rs
essential/std/: Cargo.toml
essential/std/src/: config_loader.rs  config_merger.rs  lib.rs
essential/ui9-tracers/: Cargo.toml
essential/ui9-tracers/src/: lib.rs  message.rs  progress.rs  state.rs
essential/ui9/src/: tracer.rs
examples/character-agent/: Cargo.toml
examples/character-agent/src/: main.rs
examples/trading-assistant/: Cargo.toml
examples/trading-assistant/src/: main.rs
examples/trading-bot/: Cargo.toml
examples/trading-bot/src/: main.rs
i9/i9-core/: Cargo.toml
i9/i9-core/src/: keeper.rs
i9/i9-plugin-slack/: Cargo.toml
interface/tui/: Cargo.toml
interface/tui/src/: app.rs  events.rs  lib.rs  main.rs
particles/app-line/: Cargo.toml
particles/app-line/src/: app.rs  lib.rs
particles/app-stdio/: Cargo.toml
particles/app-stdio/src/: app.rs  app_2.rs  console.rs  editor.rs  input.rs  lib.rs  output.rs  queue.rs
particles/app-tui/: Cargo.toml
particles/app-tui/src/: app.rs  events.rs  lib.rs  main.rs  state.rs
particles/chat-stdio/src/: config.rs
particles/chat-telegram/: Cargo.toml
particles/chat-telegram/src/: config.rs  particle.rs
particles/control-chat/: Cargo.toml
particles/control-chat/src/: flow.rs  lib.rs  particle.rs
particles/exchange-dydx/: Cargo.toml
particles/exchange-dydx/src/: config.rs  particle.rs
particles/model-anthropic/: Cargo.toml
particles/model-anthropic/src/: config.rs  convert.rs  lib.rs  particle.rs
particles/model-openai/: Cargo.toml
particles/model-openai/src/: config.rs  convert.rs  particle.rs
particles/model-rig/: Cargo.toml
particles/tool-maker-gui/: Cargo.toml
particles/tool-maker-tui/src/: app.rs  lib.rs  main.rs
plugins/app-stdio/: Cargo.toml
plugins/app-stdio/src/: app.rs
plugins/chat-stdio/: Cargo.toml
plugins/chat-stdio/src/: config.rs  drainer.rs  lib.rs  particle.rs
plugins/chat-telegram/: Cargo.toml
plugins/chat-telegram/src/: config.rs  particle.rs
plugins/control-chat/: Cargo.toml
plugins/control-chat/src/: flow.rs  lib.rs  particle.rs
plugins/exchange-dydx/: Cargo.toml
plugins/exchange-dydx/src/: config.rs  lib.rs  particle.rs  tool_price.rs
plugins/messaging-telegram/: Cargo.toml
plugins/model-openai/: Cargo.toml
plugins/slack/: Cargo.toml
plugins/telegram/: Cargo.toml
substance/: README.md
substance/core/: Cargo.toml
substance/ice9/: Cargo.toml
substance/n9/: Cargo.toml  README.md
substance/n9-core/: Cargo.toml
substance/n9-std/: Cargo.toml
substance/std/: Cargo.toml
substance/ui9/: Cargo.toml
substance/ui9-app/: Cargo.toml
substance/ui9-app/src/: app.rs  lib.rs  ported.rs  substate.rs
substance/ui9-codec/: Cargo.toml
substance/ui9-dui/: Cargo.toml
substance/ui9-dui/src/: hub.rs  lib.rs  reporter.rs
substance/ui9-dui/src/flow/: mod.rs
substance/ui9-dui/src/publisher/: mod.rs  recorder.rs  server.rs
substance/ui9-dui/src/relay/: connector.rs  mod.rs  node.rs  protocol.rs  relay_player.rs  remote_player.rs  router.rs
substance/ui9-dui/src/subscriber/: client.rs  generator.rs  listener.rs  local_player.rs  mod.rs  ported.rs
substance/ui9-dui/src/tracers/: event.rs  failure.rs  job.rs  live.rs  mod.rs  news.rs  peer.rs
substance/ui9-maker/: Cargo.toml
substance/ui9-mesh/: Cargo.toml
substance/ui9-net/: Cargo.toml
substance/ui9/src/names/: fqn.rs
tools/dashboard/: Cargo.toml
tools/maker/: Cargo.toml
tools/maker-gui/: Cargo.toml
tools/maker-io/: Cargo.toml
tools/maker-io/src/: app.rs  command.rs  main.rs
tools/maker-tui/: Cargo.toml
tools/maker-tui/src/: app.rs  events.rs  lib.rs  main.rs  state.rs
tools/maker-tui/src/widgets/: mod.rs  peers_list.rs  smart_widget.rs
tools/maker/src/: app.rs  app_ui.rs  command.rs  events.rs  lib.rs  main.rs  protocol.rs  state.rs
tools/protocol/: Cargo.toml
tools/tui/: Cargo.toml
(+72 files in other folders)
