[workspace]
resolver = "2"
members = [
    "dui/*",
    "essential/*",
    "examples/*",
    "particles/*",
    "tools/*",
]
exclude = [
    # "examples",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/NethermindEth/ice-nine"
rust-version = "1.84.0"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
console-subscriber = "0.4.1"
clap = { version = "4.5.27", features = ["derive"] }
crb = { version = "0.0.28", git = "https://github.com/runtime-blocks/crb" }
crb-system = { version = "0.0.28", git = "https://github.com/runtime-blocks/crb" }
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
eframe = "0.30.0"
egui = "0.30.0"
env_logger = "0.11.6"
envy = "0.4.2"
futures = "0.3.31"
ice9-core = { version = "0.0.1", path = "essential/core" }
ice9-std = { version = "0.0.1", path = "essential/std" }
libp2p = { version = "0.55.0", features = ["gossipsub", "macros", "mdns", "noise", "plaintext", "serde", "tcp", "tokio", "quic", "yamux"] }
libp2p-stream = "0.3.0-alpha"
futures-bounded = "0.2.4"
log = "0.4.25"
serde = "1.0.217"
serde_json = "1.0.138"
smallvec = "1.13.2"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-stream = "0.1.17"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-slab = "0.2.1"
ui9 = { version = "0.0.1", path = "dui/ui9" }
ui9-app = { version = "0.0.1", path = "dui/ui9-app" }
ui9-dui = { version = "0.0.1", path = "dui/ui9-dui" }
ui9-codec = { version = "0.0.1", path = "dui/ui9-codec", features = ["flex"] }
ui9-maker = { version = "0.0.1", path = "dui/ui9-maker" }
ui9-mesh = { version = "0.0.1", path = "dui/ui9-mesh" }
ui9-tracers = { version = "0.0.1", path = "dui/ui9-tracers" }
