[package]
name = "ui9-codec"
description = "uiio codecs for ice9"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
flexbuffers = { version = "2.0.0", optional = true }
serde.workspace = true
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.133", optional = true }
serde_toml = { package = "toml", version = "0.8.19", optional = true }

[features]
default = ["full"]
flex = ["flexbuffers"]
toml = ["serde_toml"]
json = ["serde_json"]
xml = ["serde-xml-rs"]
full = ["flex", "toml", "json", "xml"]
