[package]
name = "ui9-dui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
futures.workspace = true
libp2p = { version = "0.55.0", features = ["gossipsub", "macros", "mdns", "noise", "plaintext", "serde", "tcp", "tokio", "request-response", "quic", "yamux"] }
libp2p-request-response = { version = "0.28.0", features = ["cbor"] }
log.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
typed-slab.workspace = true
ui9.workspace = true
ui9-codec.workspace = true
