[package]
name = "ice-nine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
envy.workspace = true
log.workspace = true
serde.workspace = true
typedmap = "0.6.0"
