[package]
name = "ice9-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
envy.workspace = true
ice9-std.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
typed-slab = "0.2.0"
typedmap = "0.6.0"
uiio.workspace = true
uiio-element.workspace = true
