[package]
name = "ice-nine-std"
description = "Integration with the standard OS environment: files, sockets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
notify = "8.0.0"
