[package]
publish = false
name = "character-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb = "0.0.23"
dotenvy = "0.15.7"
env_logger = "0.11.6"
ice-nine-core.path = "../../essential/core"
ice-nine-plugin-telegram.path = "../../plugins/telegram"
tokio.workspace = true
