[package]
publish = false
name = "trading-assistant"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
crb-system.workspace = true
env_logger.workspace = true
ice9-core.path = "../../essential/core"
ice-nine-plugin-app-stdio.path = "../../plugins/app-stdio"
ice-nine-plugin-exchange-dydx.path = "../../plugins/exchange-dydx"
ice-nine-plugin-control-chat.path = "../../plugins/control-chat"
ice-nine-plugin-chat-stdio.path = "../../plugins/chat-stdio"
ice-nine-plugin-chat-telegram.path = "../../plugins/chat-telegram"
ice-nine-plugin-model-openai.path = "../../plugins/model-openai"
tokio.workspace = true
ui9-dui.workspace = true
ui9-mesh.workspace = true
