[package]
publish = false
name = "trading-assistant"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
crb-system.workspace = true
env_logger.workspace = true
ice9-core.path = "../../substance/core"
ice-nine-plugin-app-stdio.path = "../../particles/app-stdio"
ice-nine-plugin-exchange-dydx.path = "../../particles/exchange-dydx"
ice-nine-plugin-control-chat.path = "../../particles/control-chat"
ice-nine-plugin-chat-stdio.path = "../../particles/chat-stdio"
ice-nine-plugin-chat-telegram.path = "../../particles/chat-telegram"
ice-nine-plugin-model-openai.path = "../../particles/model-openai"
tokio.workspace = true
ui9-dui.workspace = true
ui9-mesh.workspace = true
