[package]
publish = false
name = "trading-assistant"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
crb-system.workspace = true
env_logger.workspace = true
n9-core.workspace = true
n9-app-stdio.path = "../../particles/app-stdio"
ice-nine-plugin-exchange-dydx.path = "../../particles/exchange-dydx"
n9-control-chat.path = "../../particles/control-chat"
ice-nine-plugin-chat-telegram.path = "../../particles/chat-telegram"
ice-nine-plugin-model-openai.path = "../../particles/model-openai"
"ice-nine-plugin-model-anthropic".path = "../../particles/model-anthropic"
tokio.workspace = true
ui9-dui.workspace = true
ui9-mesh.workspace = true
