[package]
publish = false
name = "trading-bot"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
ice-nine-core.path = "../../essential/core"
ice-nine-plugin-messaging-telegram.path = "../../plugins/messaging-telegram"
tokio.workspace = true
