[package]
name = "n9-app-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
colored = "3.0.0"
crb.workspace = true
ice9-core.workspace = true
ice-nine-plugin-control-chat.path = "../control-chat"
rustyline = { version = "15.0.0", features = ["derive"] }
tokio.workspace = true
ui9.workspace = true
ui9-dui.workspace = true
