[package]
name = "ice-nine-plugin-model-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
ice9-core.workspace = true
serde.workspace = true
async-openai = "0.26.0"
ui9.workspace = true
ui9-dui.workspace = true
