[package]
name = "n9-model-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = "0.26.0"
async-trait.workspace = true
crb.workspace = true
n9-core.workspace = true
serde.workspace = true
ui9.workspace = true
ui9-dui.workspace = true
