[package]
name = "ice-nine-plugin-chat-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
ice9-core.workspace = true
serde.workspace = true
tokio.workspace = true
