[package]
name = "ice-nine-plugin-exchange-dydx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dydx = "0.1.1"
ice9-core.workspace = true
serde.workspace = true
