[package]
name = "ice9-maker-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
console-subscriber.workspace = true
crb.workspace = true
eframe.workspace = true
egui.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ui9.workspace = true
