[package]
name = "ice9-maker-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio.workspace = true
ui9-app.workspace = true
ui9-dui.workspace = true
