[package]
name = "ice9-maker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
console-subscriber = "0.4.1"
crb.workspace = true
eframe = "0.30.0"
egui = "0.30.0"
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
ui9.workspace = true
